--- a/src/NavBar.css
+++ b/src/NavBar.css
@@ -2,16 +2,17 @@
 .topnav {
     background-color: #333;
     overflow: hidden;
+    text-align:center;
   }
-  
+
   /* Style the links inside the navigation bar */
   .topnav a {
     float: left;
     color: #f2f2f2;
     text-align: center;
-    padding: 14px 16px;
+    padding: 16px 20px;
     text-decoration: none;
-    font-size: 17px;
+    font-size: 20px;
   }
   
   /* Change the color of links on hover */
